[gd_scene load_steps=13 format=3 uid="uid://dkidqk23c0r27"]

[ext_resource type="Script" path="res://main/person/person.gd" id="1_x3rt7"]
[ext_resource type="PackedScene" uid="uid://cvwooob2c2mkx" path="res://main/person/manikin.tscn" id="2_g75lx"]
[ext_resource type="Script" path="res://main/person/state_machine/state_machine.gd" id="3_hf8y5"]
[ext_resource type="Script" path="res://main/person/state_machine/state.gd" id="4_nfwle"]
[ext_resource type="AudioStream" uid="uid://blx2kbqvthkrb" path="res://main/person/60013__qubodup__whoosh.ogg" id="5_88xl6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ddnpo"]
radius = 0.3
height = 1.2

[sub_resource type="SphereShape3D" id="SphereShape3D_5cusg"]
radius = 0.12

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3qlbb"]
radius = 0.2
height = 1.5

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_w56m2"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("5_88xl6")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_timh0"]
length = 0.001

[sub_resource type="Animation" id="Animation_cxohj"]
resource_name = "hurt"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tangg"]
_data = {
"RESET": SubResource("Animation_timh0"),
"hurt": SubResource("Animation_cxohj")
}

[node name="Person" type="CharacterBody3D" node_paths=PackedStringArray("projectile_spawn")]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_x3rt7")
projectile_spawn = NodePath("Camera3D/PlayerAmmoSpawn")

[node name="Manikin" parent="." instance=ExtResource("2_g75lx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0792249, 0.13424)

[node name="MainHitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_ddnpo")

[node name="HeadHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27674, 0)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="HeadHitbox"]
shape = SubResource("SphereShape3D_5cusg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.71, 0)
shape = SubResource("CapsuleShape3D_3qlbb")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15526, 0)

[node name="AimRayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0135225)
target_position = Vector3(0, 0, -1)

[node name="PlayerAmmoSpawn" type="Marker3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.309823, -0.116371, -0.185406)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("controller", "state")]
script = ExtResource("3_hf8y5")
controller = NodePath("..")
state = NodePath("Root")

[node name="Root" type="Node" parent="StateMachine"]
script = ExtResource("4_nfwle")

[node name="JumpStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_w56m2")
volume_db = -24.0
max_distance = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tangg")
}
